--- a/birds.html
+++ b/birds.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Birds by from bootstart</title>
-  <h3>birds by sai sriya gottipati</h3>
+  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
@@ -14,7 +14,28 @@
 
 </head>
 <body>
-
+    <h1>Birds by sai sriya gottipati </h1>
+    <div class="container">
+    <div class="row">
+        <div class="col-sm-2">G</div>
+        <div class="col-sm-2">O</div>
+        <div class="col-sm-2">T</div>
+        <div class="col-sm-2">T</div>
+        <div class="col-sm-2">I</div>
+        <div class="col-sm-2">P</div>
+    </div>
+    <div class="row">
+     <div class="col-md">Goose</div>
+     <div class="col-md">owl</div>
+     <div class="col-md">Tuamotu kingfisher</div>
+     <div class="col-md">Treerunner</div>
+     <div class="col-md">Island flycatcher</div>
+     <div class="col-md">penguin</div>
+    </div>
+    </div>
+    <p>As we reduce or minimize the size of the browser the birds row breaks first followed by letters row</p>
+</body>
+</html>
 
 
 </body>
