--- a/birds.html
+++ b/birds.html
@@ -33,7 +33,7 @@
      <div class="col-md">penguin</div>
     </div>
     </div>
-    <p>As we reduce or minimize the size of the browser the birds row breaks first followed by letters row</p>
+    <p> from the centre 'T' the row breaks ...As we reduce or minimize the screen the positions are not fixed so the elements reletively get scrolled with the screen</p>
 </body>
 </html>
 
