commiting bird images

--- a/birds.html
+++ b/birds.html
@@ -33,8 +33,24 @@
      <div class="col-md">penguin</div>
     </div>
     </div>
-    <p> from the centre 'T' the row breaks ...As we reduce or minimize the screen the positions are not fixed so the elements reletively get scrolled with the screen</p>
-</body>
+    <p> from the centre 'T' the row breaks ...As we reduce or minimize the screen the positions are not fixed so the elements reletively get scrolled with the screen till they entirely appear in a single row</p>
+   <br>
+    <h6>images of birds</h6>
+    <div>
+      <img src="goose.jpg" class="img-fluid" alt="goose">
+      <img src="owl.jpg" class="img-fluid" alt=" owl " >
+      <img src="penguin.jpg" class="img-fluid" alt="penguin"   > 
+    </div>
+
+    <div>
+      <img src="goose.jpg" class="img-thumbnail" alt="goose">
+      <img src="owl.jpg" class="img-thumbnail" alt="owl">
+      <img src="penguin.jpg" class="img-thumbnail" alt="penguin">
+      </div>
+
+
+
+  </body>
 </html>
 
 
