--- a/birds.html
+++ b/birds.html
@@ -14,7 +14,26 @@
 
 </head>
 <body>
-    <h1>Birds by sai sriya gottipati </h1>
+  <nav class="navbar navbar-expand-md navbar-light" style="background-color: rgb(178, 231, 231);">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="birds.html">Interesting Birds</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+     
+       <span class="navbar-toggler-icon"></span>
+     </button> 
+     <div class="collapse navbar-collapse" id="navbarSupportedContent">     
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link active" href="basic.html">BASIC</a>
+        </li>
+        <li class="nav-item">
+           <a class="nav-link active" href="advanced.html">ADVANCED</a>
+    </li>
+    </ul>
+    </div>
+    </div>
+    </nav>
+ <h1>Birds by sai sriya gottipati </h1>
     <div class="container">
     <div class="row">
         <div class="col-sm-2">G</div>
@@ -37,17 +56,68 @@
    <br>
     <h6>images of birds</h6>
     <div>
-      <img src="goose.jpg" class="img-fluid" alt="goose">
-      <img src="owl.jpg" class="img-fluid" alt=" owl " >
-      <img src="penguin.jpg" class="img-fluid" alt="penguin"   > 
+      <img src="goose.jpg" class="img-fluid" alt="goose" height="400" width="500">
+      <img src="owl.jpg" class="img-fluid" alt=" owl " height="400" width="500" >
+      <img src="penguin.jpg" class="img-fluid" alt="penguin"  height="400" width="500"   > 
     </div>
-
+<br>
     <div>
-      <img src="goose.jpg" class="img-thumbnail" alt="goose">
-      <img src="owl.jpg" class="img-thumbnail" alt="owl">
-      <img src="penguin.jpg" class="img-thumbnail" alt="penguin">
+      <img src="goose.jpg" class="img-thumbnail" alt="goose"  height="400" width="500">
+      <img src="owl.jpg" class="img-thumbnail" alt="owl"  height="400" width="500">
+      <img src="penguin.jpg" class="img-thumbnail" alt="penguin" height="400" width="500">
       </div>
-
+<br>
+      <table class="table table-striped table-bordered table-hover table-sm">
+        <caption> creating a table using birds lake and athlete and letter</caption>
+        <thead class="table-active">
+          <tr>
+            <th scope="col">Letter</th>
+            <th scope="col">Bird</th>
+            <th scope="col">Lake</th>
+            <th scope="col">Athlete</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="table-primary">
+            <th scope="row">G</th>
+            <td>goose</td>
+            <td>	Goose lake</td>
+            <td>Gerald wallace</td>
+          </tr>
+          <tr class="table-warning">
+            <th scope="row">O</th>
+            <td>owl</td>
+            <td> 	Lake Ontario</td>
+            <td>O.J. Mayo</td>
+          </tr>
+          <tr class="table-danger">
+            <th scope="row">T</th>
+            <td>Treerunner</td>
+            <td>	Lake Torrens</td>
+            <td>Tony Parker </td>
+          </tr>
+          <tr class="table-success">
+            <th scope="row">T</th>
+            <td>Tuamotu kingfisher</td>
+            <td>Tahoe Lake</td>
+            <td>Tyreke Evans</td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row">I</th>
+            <td>Island flycatcher</td>
+            <td>	Ibera Lake</td>
+            <td>Ike Diogu</td>
+          </tr>
+          <tr class="table-info">
+            <th scope="row">P</th>
+            <td>penguin</td>
+            <td>	Lake Pomo</td>
+            <td>Pau Gasol</td>
+          </tr>
+        </tbody>
+      </table>
+      <label>Buttons:</label>
+      <br>
 
 
   </body>
