--- a/basic.html
+++ b/basic.html
@@ -17,7 +17,7 @@
     <h2>
         Basic page with html
     </h2>
-    <a href="advanced.html">Advanced Page</a>
+    <a href="Advanced.html">Advanced Page</a>
     
 
 </body>
