--- a/birds.html
+++ b/birds.html
@@ -96,19 +96,19 @@
             <td>	Lake Torrens</td>
             <td>Tony Parker </td>
           </tr>
-          <tr class="table-success">
+          <tr class="table-primary">
             <th scope="row">T</th>
             <td>Tuamotu kingfisher</td>
             <td>Tahoe Lake</td>
             <td>Tyreke Evans</td>
           </tr>
-          <tr class="table-light">
+          <tr class="table-warning">
             <th scope="row">I</th>
             <td>Island flycatcher</td>
             <td>	Ibera Lake</td>
             <td>Ike Diogu</td>
           </tr>
-          <tr class="table-info">
+          <tr class="table-danger">
             <th scope="row">P</th>
             <td>penguin</td>
             <td>	Lake Pomo</td>
@@ -122,7 +122,7 @@
 
       <div class="btn-toolbar label label-info" role="toolbar">
         <div class="btn-group btn-success label label-success">
-        <button type="button" class="btn">G</button>
+        <button type="button" class="btn" clr>G</button>
         <button type="button" class="btn">O</button>
         <button type="button" class="btn">T</button>
         </div>
