--- a/birds.html
+++ b/birds.html
@@ -138,7 +138,7 @@
         <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">DROP DOWN</button>    
         <div class="dropdown-menu">
           <a href="basic.html" class="dropdown-item">Basic page</a>
-          <a href="advanced.html" class="dropdown-item">Advanced page</a>
+          <a href="Advanced.html" class="dropdown-item">Advanced page</a>
         </div>
      </div>
 
