--- a/birds.html
+++ b/birds.html
@@ -27,7 +27,7 @@
           <a class="nav-link active" href="basic.html">BASIC</a>
         </li>
         <li class="nav-item">
-           <a class="nav-link active" href="advanced.html">ADVANCED</a>
+           <a class="nav-link active" href="Advanced.html">ADVANCED</a>
     </li>
     </ul>
     </div>
